tests/bad/array_literal.out
tests/bad/array_literal.glaz:2:7: error: invalid vector literal
     | 
   2 | 	_ = vec[i32]{}; // invalid
     | 	    ^^^^^^^^^^
     = note: 1 or more elements are expected
     = help: use `vec[T]::new()` instead
tests/bad/array_literal.glaz:3:7: error: unable to calculate array size
     | 
   3 | 	_ = [i32; _]::new(); // invalid
     | 	    ^^^^^^^^^^^^^^^
     = help: add a size: `[T; 5]::new()
tests/bad/array_literal.glaz:5:7: error: array literal do not take arguments
     | 
   5 | 	_ = [i32; 3]::new(1, 2, 3); // invalid
     | 	    ^
glaz error: could not compile `array_literal`, aborting due to 3 previous errors.
